--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@creit.tech/stellar-wallets-kit": "^1.4.1",
+    "@stellar/freighter-api": "^3.0.0",
     "@stellar/typescript-wallet-sdk": "^1.8.0",
     "next": "15.1.3",
     "react": "^19.0.0",
